# influxdb-cxx

./: .gitignore  CMakeLists.txt  READMEZZP.md
include/: Point.h
src/: BoostSupport.cxx  BoostSupport.h  CMakeLists.txt  InfluxDBFactory.cxx  NoBoostSupport.cxx  UriParser.h
test/: BoostSupportTest.cxx  CMakeLists.txt  NoBoostSupportTest.cxx
test/system/: CMakeLists.txt
testMSVC/: testMSVC.cpp  testMSVC.sln  testMSVC.vcxproj  testMSVC.vcxproj.filters
testMSVC/Debug/: testMSVC.exe.recipe  testMSVC.ilk  testMSVC.vcxproj.FileListAbsolute.txt  vc142.idb
testMSVC/Debug/testMSVC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testMSVC.lastbuildstate
testMSVC/x64/Debug/: testMSVC.exe.recipe  testMSVC.vcxproj.FileListAbsolute.txt  vc142.idb
testMSVC/x64/Debug/testMSVC.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testMSVC.lastbuildstate
testMSVC/x64/Release/: testMSVC.exe.recipe  testMSVC.iobj  testMSVC.ipdb  testMSVC.vcxproj.FileListAbsolute.txt
testMSVC/x64/Release/testMSVC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testMSVC.lastbuildstate  testMSVC.write.1u.tlog
